Improved base templates to use variables and fixed volume control not showing at proper position on hd-desktop

--- a/design/styles/components/player/player-volume-control.styl
+++ b/design/styles/components/player/player-volume-control.styl
@@ -22,6 +22,8 @@
     
     +at-hd-desktop()
         top: 72vh
+        left: calc(38vw + 200px)        
+        width: calc(30vw - 200px)
         
 
 .player-volume-control-seek
